<resources>
    <string name="app_name">HelloSharedPrefs</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="color_default">Default</string>
    <string name="default_count">0</string>
    <string name="count_button">Count</string>
    <string name="settings_button">Settings</string>
    <string name="pick_color">Pick Color:</string>
    <string name="enter_count">Enter Count:</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="ex_1">ex: 1</string>
    <string-array name="colors_array">
        <item>@string/color_default</item>
        <item>@string/red</item>
        <item>@string/blue</item>
        <item>@string/green</item>
        <item>@string/black</item>
    </string-array>
</resources>
